--- a/chicks/chicks.html
+++ b/chicks/chicks.html
@@ -68,7 +68,7 @@
 
             <!-- Product Image -->
             <div class="bento-item col-1 reveal">
-                <img src="fluffy_chicks_nest.jpg" alt="FFFarm day-old fluffy chicks" class="card-image">
+                <img src="chicks1.jpg" alt="FFFarm day-old fluffy chicks" class="card-image">
                 <div class="card-content">
                     <span class="card-tag">Adorable</span>
                 </div>
