--- a/chicks/egg.html
+++ b/chicks/egg.html
@@ -58,7 +58,7 @@
 
             <!-- Product Image -->
             <div class="bento-item col-1 reveal">
-                <img src="organic_eggs_lifestyle.jpg" alt="FFFarm organic assorted eggs" class="card-image">
+                <img src="Eggs4.jpg" alt="FFFarm organic assorted eggs" class="card-image">
                 <div class="card-content">
                     <span class="card-tag">Organic</span>
                 </div>
