--- a/chicks/homepage.html
+++ b/chicks/homepage.html
@@ -33,24 +33,21 @@
 
         <!-- Bento Category Grid -->
         <div class="bento-grid">
-            <!-- Main Video/Hero Card -->
+            <!-- Main Image/Hero Card -->
             <div class="bento-item col-2 row-2 reveal">
                 <div class="card-content">
                     <span class="card-tag">Operational Showcase</span>
                     <h2>Experience the <br>Farm Life</h2>
                     <p style="color: var(--text-dim); margin-bottom: 2rem;">Witness the harmony of nature and
                         technology. Our daily operations are open for student tours and local visits.</p>
-                    <div class="video-container" style="margin-top: auto;">
-                        <video autoplay muted loop playsinline style="width: 100%; border-radius: 20px;">
-                            <source src="farm_tour.mp4" type="video/mp4">
-                        </video>
-                    </div>
+                    <img src="poultry.jpeg" alt="FFFarm cinematic landscape" class="card-image"
+                        style="margin-top: auto;">
                 </div>
             </div>
 
             <!-- Lifestyle Image Card -->
             <div class="bento-item col-2 reveal">
-                <img src="modern_farm_hero.jpg" alt="FFFarm cinematic landscape" class="card-image">
+                <img src="hens1.jpg" alt="FFFarm cinematic landscape" class="card-image">
                 <div class="card-content">
                     <span class="card-tag">Atmosphere</span>
                     <h3>Rooted in <br>The Valley</h3>
