--- a/chicks/about.html
+++ b/chicks/about.html
@@ -49,7 +49,7 @@
 
             <!-- Visionary Card -->
             <div class="bento-item col-2 reveal">
-                <img src="farm_visit_engagement.jpg" alt="Peter Maina at the farm" class="card-image">
+                <img src="hens1.jpg" alt="Peter Maina at the farm" class="card-image">
                 <div class="card-content">
                     <span class="card-tag">The Visionary</span>
                     <h3>Peter Maina</h3>
