--- a/chicks/chickens.html
+++ b/chicks/chickens.html
@@ -68,7 +68,7 @@
 
             <!-- Product Image -->
             <div class="bento-item col-1 reveal">
-                <img src="heritage_chicken_portrait.jpg" alt="Majestic heritage hen" class="card-image">
+                <img src="chickens1.webp" alt="Majestic heritage hen" class="card-image">
                 <div class="card-content">
                     <span class="card-tag">Premium</span>
                 </div>
