--- a/QR code gen/index.html
+++ b/QR code gen/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <title>QR Code Generator</title>
 </head>
-<body>
     <div class="box">
         <div class="qr-header">
             <h1>Generate QR Code</h1>
@@ -35,10 +34,16 @@
         </div>
     </div>
 
+    <footer>
+        <p>&#169; <span id="copyrightYear"></span> | All rights reserved | <a href="https://mainapeter.netlify.app" target="_blank" rel="noopener noreferrer" class="developer-link">Peter Maina</a></p>
+    </footer>
+
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script>
+        // Dynamic year update
+        document.getElementById('copyrightYear').textContent = new Date().getFullYear();
+    </script>
 </body>
-
-<footer> &#169 2025 | All rights reserved | Peter Maina </footer>
 
 </html>
